# SO1_1S2024_202000173

./: README.md
Proyecto1/: .gitignore  README.md  docker-compose.yaml
Proyecto1/backend/: Dockerfile  dockerfile  go.mod  go.sum  main.go
Proyecto1/database/: database_init.sql  docker-compose.yaml
Proyecto1/frontend/: dockerfile  package-lock.json  package.json
Proyecto1/frontend/nginx/: nginx.conf
Proyecto1/frontend/public/: index.html
Proyecto1/frontend/src/: App.js  index.css
Proyecto1/src/cpu/: .Module.symvers.cmd  .cpu_so1_1s2024.ko.cmd  .cpu_so1_1s2024.mod.cmd  .cpu_so1_1s2024.mod.o.cmd  .cpu_so1_1s2024.o.cmd  .modules.order.cmd  cpu_so1_1s2024.c  cpu_so1_1s2024.ko  cpu_so1_1s2024.mod.c  modules.order
Proyecto1/src/ram/: .Module.symvers.cmd  .modules.order.cmd  .ram_so1_1s2024.ko.cmd  .ram_so1_1s2024.mod.cmd  .ram_so1_1s2024.mod.o.cmd  .ram_so1_1s2024.o.cmd  ram_so1_1s2024.c  ram_so1_1s2024.ko  ram_so1_1s2024.mod  ram_so1_1s2024.mod.c
Proyecto2/: .gitignore
Proyecto2/Grpc/: docker-compose.yaml
Proyecto2/Grpc/Client/: Dockerfile  client.go  go.mod  go.sum
Proyecto2/Locust/: locust.py
Proyecto2/Pruebas/: data1.json  data2.json
Proyecto2/golang_consumer/: Dockerfile  go.mod  go.sum  main.go
Proyecto2/kafka/: topic.yaml
Proyecto2/locust/: traffic.py
Proyecto2/producer/rust/rust_producer/: Cargo.toml  Dockerfile
Proyecto2/producer/rust/rust_producer/src/: main.rs
hts/: go.mod
hts/ht1/: README.md  go.mod
tareas/tarea1/: README.md
tareas/tarea2/: README.md  compose.yaml
tareas/tarea3/: README.md
tareas/tarea5/: README.md
(+113 files in other folders)
