[package]
name = "rust_producer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.5.1"
serde_json = "1.0"
rdkafka = "0.36.2"
rdkafka-sys = "4.7.0"

[[bin]]
name = "server"
path = "src/main.rs"